// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPhoto component fades image when anonymous 1`] = `
<Component
  style={null}
>
  <Component
    style={
      Object {
        "borderRadius": 20,
        "overflow": "hidden",
      }
    }
  >
    <MyImage
      resizeMode="cover"
      source={
        Object {
          "uri": "https://via.placeholder.com/150",
        }
      }
      style={
        Array [
          Object {
            "height": 40,
            "width": 40,
          },
          Object {
            "backgroundColor": "#f0f0f0",
          },
          Object {
            "opacity": 0.3,
          },
        ]
      }
      testId="userPhoto"
    />
  </Component>
</Component>
`;

exports[`UserPhoto component renders a URL image 1`] = `
<Component
  style={null}
>
  <Component
    style={
      Object {
        "borderRadius": 20,
        "overflow": "hidden",
      }
    }
  >
    <MyImage
      resizeMode="cover"
      source={
        Object {
          "uri": "https://via.placeholder.com/150",
        }
      }
      style={
        Array [
          Object {
            "height": 40,
            "width": 40,
          },
          Object {
            "backgroundColor": "#f0f0f0",
          },
          null,
        ]
      }
      testId="userPhoto"
    />
  </Component>
</Component>
`;

exports[`UserPhoto component renders an SVG image 1`] = `
<Component
  style={null}
>
  <Component
    style={
      Object {
        "borderRadius": 20,
        "overflow": "hidden",
      }
    }
  >
    <MyImage
      resizeMode="cover"
      source={
        Object {
          "uri": "data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\" style=\\"background:#9662c4\\"><g><text text-anchor=\\"middle\\" dy=\\".35em\\" x=\\"512\\" y=\\"512\\" fill=\\"#ffffff\\" font-size=\\"700\\" font-family=\\"-apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif\\">T</text></g></svg>",
        }
      }
      style={
        Array [
          Object {
            "height": 40,
            "width": 40,
          },
          Object {
            "backgroundColor": "#f0f0f0",
          },
          null,
        ]
      }
      testId="userPhoto"
    />
  </Component>
</Component>
`;

exports[`UserPhoto component renders an online indicator 1`] = `
<Component
  style={null}
>
  <Component
    style={
      Object {
        "borderRadius": 20,
        "overflow": "hidden",
      }
    }
  >
    <MyImage
      resizeMode="cover"
      source={
        Object {
          "uri": "https://via.placeholder.com/150",
        }
      }
      style={
        Array [
          Object {
            "height": 40,
            "width": 40,
          },
          Object {
            "backgroundColor": "#f0f0f0",
          },
          null,
        ]
      }
      testId="userPhoto"
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "borderColor": "#fff",
          "borderRadius": 12,
          "borderStyle": "solid",
          "borderWidth": 2,
          "bottom": -2,
          "height": 12,
          "position": "absolute",
          "right": -2,
          "width": 12,
        },
        Object {
          "backgroundColor": "#43A047",
        },
      ]
    }
    testId="onlineIndicator"
  />
</Component>
`;
